Fixed the styling on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,10 +20,10 @@ html {
 }
 
 #hero {
-  height: 90vh;
+  height: 100vh;
+  width: 100%;
   text-align: center;
   position: relative;
-  min-height: 100svh;
   display: grid;
   place-items: center;
   color: white;
@@ -164,6 +164,14 @@ html {
   height: 400px;
 }
 
+.hero-grid {
+  width: 100%;
+}
+
+.cube-container {
+  margin: 0 auto;
+}
+
 @keyframes bounce {
 
   0%,
@@ -182,5 +190,28 @@ html {
   60% {
     transform: translateY(3px);
     /* smaller bounce up */
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .rubikscube__grid {
+    margin-top: 5rem;
+  }
+  
+  .hero-title {
+    margin: 0 auto;
+  }
+  
+  .rubikscube__container {
+    width: 300px;
+    height: 300px;
+  }
+    
+  #footer {
+    padding-bottom: 2rem;
+  }
+  
+  .project-card {
+    width: 90%;
   }
 }
